<resources>
    <string name="app_name">PexelsApp</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="characters">Characters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character">Character</string>
    <string name="no_character_found">No character found</string>
    <string name="retry">Retry</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="filter">Filter</string>
    <string name="enter_character_name">Enter character name</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="genderless">Genderless</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="female_gender">female</string>
    <string name="male_gender">male</string>
    <string name="unknown_gender">unknown</string>
    <string name="genderless_gender">genderless</string>
    <string name="alive_status">alive</string>
    <string name="dead_status">dead</string>
    <string name="unknown_status">unknown</string>
    <string name="emty_line" />
    <string name="rick_and_morty">Rick and Morty</string>
</resources>