<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.characters.FilterFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="@dimen/elevationToolbar"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:contentInsetStart="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/defaultMarginFilter"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter"
                        android:textAppearance="@style/TextAppearance.h6"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/clear"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:gravity="center"
                        android:text="@string/clear"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@color/clearColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:visibility="visible" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMarginFilter"
                android:hint="@string/enter_character_name"
                app:layout_constraintBottom_toTopOf="@id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/characterName"
                    android:layout_width="match_parent"
                    android:imeOptions="actionSearch"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/paddingHorizontalTW"
                android:paddingTop="@dimen/paddingTopTW"
                android:paddingBottom="@dimen/paddingBottomTW"
                android:text="@string/status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputLayout"
                tools:layout_editor_absoluteY="62dp" />

            <RadioGroup
                android:id="@+id/rgStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/radioGroupPaddingHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioButton
                    android:id="@+id/rbAlive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alive"
                    android:textAppearance="@style/TextAppearance.radioButtonName" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dividerSize"
                    android:background="@color/black" />

                <RadioButton
                    android:id="@+id/rbDead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dead" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dividerSize"
                    android:background="@color/black" />

                <RadioButton
                    android:id="@+id/rbUnknown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dividerSize"
                    android:background="@color/black" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/paddingHorizontalTW"
                android:paddingTop="@dimen/paddingTopTW"
                android:paddingBottom="@dimen/paddingBottomTW"
                android:text="@string/gender"
                android:textAppearance="@style/TextAppearance.radioButtonBody"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgStatus" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/radioGroupPaddingHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textAppearance="@style/TextAppearance.radioButtonName" />

                <View
                    android:id="@+id/divider6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dividerSize"
                    android:background="@color/black" />

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <View
                    android:id="@+id/divider7"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dividerSize"
                    android:background="@color/black" />

                <RadioButton
                    android:id="@+id/rbGenderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genderless" />

                <View
                    android:id="@+id/divider8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dividerSize"
                    android:background="@color/black" />

                <RadioButton
                    android:id="@+id/rbgUnknown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown" />

            </RadioGroup>


            <Button
                android:id="@+id/btnApply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/defaultMargin"
                android:backgroundTint="@color/clearColor"
                android:text="@string/apply"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgGender" />

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dividerSize"

                android:background="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/btnApply"
                app:layout_constraintTop_toBottomOf="@+id/rgGender" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>